--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<nb-layout>
+
+
+
+  <nb-layout-column>
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+
+  </nb-layout-column>
+
+
+</nb-layout>
