--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,28 +1,18 @@
-<nav class="bg-gray-800">
+<nav class="bg-gray-800 w-full">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
+
         <button type="button"
           class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
           aria-controls="mobile-menu" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
-          <!-- Icon when menu is closed. -->
-          <!--
-            Heroicon name: outline/menu
 
-            Menu open: "hidden", Menu closed: "block"
-          -->
           <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
-          <!-- Icon when menu is open. -->
-          <!--
-            Heroicon name: outline/x
 
-            Menu open: "block", Menu closed: "hidden"
-          -->
           <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -36,7 +26,7 @@
         </div>
         <div class="hidden sm:block sm:ml-6">
           <div class="flex space-x-4">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+
             <app-navbar-link *ngFor="let link of links" [path]="link.path" [pathName]="link.label"></app-navbar-link>
           </div>
         </div>
@@ -45,10 +35,10 @@
     </div>
   </div>
 
-  <!-- Mobile menu, show/hide based on menu state. -->
+
   <div class="sm:hidden" id="mobile-menu">
     <div class="px-2 pt-2 pb-3 space-y-1">
-      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+
       <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium">Dashboard</a>
       <a href="#"
         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
@@ -59,3 +49,13 @@
     </div>
   </div>
 </nav>
+<!-- <nb-card>
+  <nb-card-body>
+
+    <nb-actions size="small" fullWidth>
+      <nb-action icon="search-outline"></nb-action>
+      <nb-action icon="power-outline"></nb-action>
+    </nb-actions>
+
+  </nb-card-body>
+</nb-card> -->
