--- a/src/app/features/students/components/main/students.component.html
+++ b/src/app/features/students/components/main/students.component.html
@@ -5,7 +5,8 @@
         <table class="min-w-max w-full table-auto">
           <caption>
             <div class="flex  items-center p-2">
-              <button class="bg-purple-200 text-purple-600 hover:bg-purple-300 mr-2 font-bold py-1 px-2 rounded">
+              <button (click)="add()"
+                class="bg-purple-200 text-purple-600 hover:bg-purple-300 mr-2 font-bold py-1 px-2 rounded">
                 Aggiungi
               </button>
               <p class="mr-2 font-medium uppercase text-purple-600">senza corso</p>
@@ -72,7 +73,17 @@
 </div>
 <ng-template #dialog let-data let-ref="dialogRef">
   <nb-card>
-    <nb-card-header>Template Dialog</nb-card-header>
+    <nb-card-header>Elimina studente</nb-card-header>
+    <nb-card-body>{{ data }}</nb-card-body>
+    <nb-card-footer class="flex justify-between">
+      <button nbButton (click)="ref.close()">Annulla</button>
+      <button nbButton status="danger" (click)="ref.close('delete')">Elimina</button>
+    </nb-card-footer>
+  </nb-card>
+</ng-template>
+<ng-template #editDialog let-data let-ref="dialogRef">
+  <nb-card>
+    <nb-card-header>Modifica studente</nb-card-header>
     <nb-card-body>{{ data }}</nb-card-body>
     <nb-card-footer class="flex justify-between">
       <button nbButton (click)="ref.close()">Annulla</button>
